--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <main>
         <div id="page">
 			<header>
-				<h1>Shop Shop</h1>
+				<img src="images/shopshop.svg" alt="Shop shop logo">
 				<nav>
 					<ul>
 						<li><a href="">Home</a></li>
@@ -44,7 +44,7 @@
 					</section>
 				</article>
 			</div>
-			
+
 			<footer>
 				<p>I like footers</p>
 			</footer>
