added contact info

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <main>
         <div id="page">
 			<header>
-				<img src="images/shopshop.svg" alt="Shop shop logo">
+				<h1>Shop Shop</h1>
 				<nav>
 					<ul>
 						<li><a href="">Home</a></li>
@@ -44,9 +44,14 @@
 					</section>
 				</article>
 			</div>
-
+			
 			<footer>
-				<p>I like footers</p>
+				<h2>Contact info</h2>
+				Mail: <a href="contact@soppshop.com">contact@soppshop.com</a>
+				<br>
+				Phone: 123456789
+				<br>
+				Adresse: Soppveien 69N, 0015 Oslo
 			</footer>
 		</div>
     </main>
