added commentary for the footer, and changed a typo

--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 			</div>
 			
 			<footer>
+				<!--Here is the contact info for SoppShop. The mail, phone and adress is all fake-->
 				<h2>Contact info</h2>
 				Mail: <a href="contact@soppshop.com">contact@soppshop.com</a>
 				<br>
 				Phone: 123456789
 				<br>
-				Adresse: Soppveien 69N, 0015 Oslo
+				Adress: Soppveien 69N, 0015 Oslo
 			</footer>
 		</div>
     </main>
