--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
 			<div id="main">
 				<article>
 					<section>
-						<p>I'm a fish</p>
-						<figure>
+						<p>I'm a fish</p> <!--An introductory paragraph -->
+						<figure> <!--A figure that contains an image and its caption it includes som very basic styling-->
 							<img src="images/COD.JPG" alt="Good looking fish" style="width: 100%">
 							<figcaption>This is a male cod swimming in his natural habitat.</figcaption>
 						</figure>
 						
 						<p>However I am not the following:</p>
-						<ul>
+						<ul><!--A list containg what a fish is not-->
 							<li>A horse</li>
 							<li>A giraffee</li>
 							<li>A dog</li>
@@ -37,7 +37,8 @@
 						</ul>
 						
 						<p>I am from Lofoten, the place where all the "top F's" (Fish's) are from!</p>
-						<iframe 
+						<!--A element containg a resource from another webpage. In this particular case its a map fro google maps-->
+						<iframe
 							src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d7426.052416072708!2d13.526742787348796!3d68.04902138112344!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x45de3f6ae3f3e829%3A0x619c91674bfc3c5d!2sLofoten!5e1!3m2!1sno!2sno!4v1694770629615!5m2!1sno!2sno" 
 							width="450" 
 							height="450"></iframe>
