comments for header and head

--- a/index.html
+++ b/index.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Head is the text on the tab	 -->
   <head>
+	<!-- Character set is set to UTF-8 -->
     <meta charset="UTF-8">
+	<!-- Title text for the head in the tab 	 -->
     <title>Shop Shop</title>
   </head>
   <body>
     <main>
         <div id="page">
+			<!-- Header with navigation for the site-->
 			<header>
+				<!-- Title of webpage-->
 				<h1>Shop Shop</h1>
+				<!-- Navigation of site-->
 				<nav>
+					<!-- List of links to areas in site-->
 					<ul>
+						<!-- A link to the site, each link sends you to .../shroom -->
 						<li><a href="">Home</a></li>
 						<li><a href="shroom">Shrooms</a></li>
 						<li><a href="fish">Fish</a></li>
