--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<nav>
 					<!-- List of links to areas in site-->
 					<ul>
-						<!-- A link to the site, each link sends you to .../shroom -->
+						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
 						<li><a href="">Home</a></li>
 						<li><a href="shroom">Shrooms</a></li>
 						<li><a href="fish">Fish</a></li>
