--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 			<!-- Header with navigation for the site-->
 			<header>
 				<!-- Title of webpage-->
-				<h1>Shop Shop</h1>
+				<!-- logo of webpage as figure with width: 30%-->
+				<figure>
+					<img src="images/shopshop.svg" alt="logo of of webpage" style="width: 30%">
+				</figure>
 				<!-- Navigation of site-->
 				<nav>
 					<!-- List of links to areas in site-->
