Added smily emoji

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 				<!-- Welcoming message inside a p tag -->
 				<p>Welcome to shop shop, the shopping website of the future! Now you can buy locally gathered food, straight from the great and beutiful mother nature.</p>
 				<!-- This aside contains some information. Without css it will just render bellow the element above -->
-				<aside>Any questions? Don't hesitate to contact us! :D</aside>
+				<aside>Any questions? Don't hesitate to contact us!😊</aside>
 				
 				<!-- Article about fish, could be a slideshow in the furutre -->
 				<article>
