Fixed figcaptions and alt in images

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 						<p>Thick and juicy fish from the sea.</p> <!--An introductory paragraph -->
 						<figure> <!--A figure that contains an image and its caption it includes som very basic styling-->
 							<img src="images/COD.JPG" alt="Good looking fish" style="width: 40%">
-							<figcaption>This is a male cod swimming in his natural habitat.</figcaption>
+							<figcaption>This is a female cod swimming in his natural habitat.</figcaption>
 						</figure>
 					</section>
 				</article>
@@ -78,8 +78,8 @@
 						<h3>Mushroom 3,2kg - 840kr</h3> <!-- A section header containing main information -->
 						<p>This is untoxic, it's true, I promise.</p> <!--An introductory paragraph -->
 						<figure> <!--A figure that contains an image and its caption it includes som very basic styling-->
-							<img src="images/standard_kantarell.jpg" alt="Good looking fish" style="width: 40%">
-							<figcaption>This is a male cod swimming in his natural habitat.</figcaption>
+							<img src="images/standard_kantarell.jpg" alt="Good looking mushroom" style="width: 40%">
+							<figcaption>This shroom was gathered in the woods.</figcaption>
 						</figure>
 					</section>
 					
@@ -87,8 +87,8 @@
 						<h3>Mushroom 1,2kg - 610</h3> <!-- A section header containing main information -->
 						<p>I'm a brown mushroom</p> <!--An introductory paragraph -->
 						<figure> <!--A figure that contains an image and its caption it includes som very basic styling-->
-							<img src="images/standard_kantarell.jpg" alt="Good looking fish" style="width: 40%">
-							<figcaption>This is a male cod swimming in his natural habitat.</figcaption>
+							<img src="images/standard_kantarell.jpg" alt="Good looking mushroom" style="width: 40%">
+							<figcaption>This was picked under a sprucee tree.</figcaption>
 						</figure>
 					</section>
 				</article>
