--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 					</section>
 					
 					<section>
-						<h3>Mushroom 1,2kg - 610</h3> <!-- A section header containing main information -->
+						<h3>Mushroom 1,2kg - 610kr</h3> <!-- A section header containing main information -->
 						<p>I'm a brown mushroom</p> <!--An introductory paragraph -->
 						<figure> <!--A figure that contains an image and its caption it includes som very basic styling-->
 							<img src="images/standard_kantarell.jpg" alt="Good looking mushroom" style="width: 40%">
