Added line in footer

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 				</article>
 			</div>
 			
+			<!-- Footer for the website -->
 			<footer>
+				<hr>
 				<!--Here is the contact info for SoppShop. The mail, phone and adress is all fake-->
 				<h2>Contact info</h2>
 				Mail: <a href="contact@soppshop.com">contact@soppshop.com</a>
