Added another hr

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 						<li><a href="berry">Berries</a></li>
 					</ul>
 				</nav>
+				<hr> <!-- hr tag to mark the end of the header -->
 			</header>
 			
 			<div id="main">
