--- a/index.html
+++ b/index.html
@@ -13,19 +13,16 @@
 			<!-- Header with navigation for the site. This solves task 4b-->
 			<header>
 				<!-- Title of webpage-->
-				<!-- logo of webpage as figure with width: 30%-->
-				<figure>
-					<img src="images/shopshop.svg" alt="logo of of webpage" style="width: 30%">
-				</figure>
+				<h>SHOP SHOP</h>
 				<!-- Navigation of site-->
 				<nav>
 					<!-- List of links to areas in site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-						<li><a href="">Home</a></li>
-						<li><a href="shroom">Shrooms</a></li>
-						<li><a href="fish">Fish</a></li>
-						<li><a href="berry">Berries</a></li>
+						<li><a href="home">Home</a></li>
+						<li><a href="items">Items</a></li>
+						<li><a href="faq">FaQ</a></li>
+						<li><a href="help">Help</a></li>
 					</ul>
 				</nav>
 				<hr> <!-- hr tag to mark the end of the header -->
