Styled header title and navigation

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
 	<!-- Title text for the head in the tab 	 -->
     <title>Shop Shop</title>
+	<!-- Importing stylesheet -->
+	<link rel="stylesheet" href="./css/index.css">
   </head>
   <body>
     <main>
@@ -13,9 +15,9 @@
 			<!-- Header with navigation for the site. This solves task 4b-->
 			<header>
 				<!-- Title of webpage-->
-				<h>SHOP SHOP</h>
+				<h1 class="header-title">SHOP SHOP</h1>
 				<!-- Navigation of site-->
-				<nav>
+				<nav class="header-nav">
 					<!-- List of links to areas in site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
@@ -25,7 +27,6 @@
 						<li><a href="help">Help</a></li>
 					</ul>
 				</nav>
-				<hr> <!-- hr tag to mark the end of the header -->
 			</header>
 			
 			<div id="main">
