Added vertical bar

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<!-- List of links to areas in site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-						<li><a href="home">Home</a></li>
-						<li><a href="items">Items</a></li>
-						<li><a href="faq">FaQ</a></li>
+						<li><a href="home">Home</a></li>|
+						<li><a href="items">Items</a></li>|
+						<li><a href="faq">FaQ</a></li>|
 						<li><a href="help">Help</a></li>
 					</ul>
 				</nav>
