--- a/index.html
+++ b/index.html
@@ -98,14 +98,15 @@
 			
 			<!-- Footer for the website -->
 			<footer>
-				<hr>
 				<!--Here is the contact info for SoppShop. The mail, phone and adress is all fake-->
-				<h2>Contact info</h2>
-				Mail: <a href="contact@soppshop.com">contact@soppshop.com</a>
-				<br>
-				Phone: 123456789
-				<br>
-				Adress: Soppveien 69N, 0015 Oslo
+				<div>
+					<h2>Contact info</h2>
+					Mail: <a href="contact@soppshop.com">contact@soppshop.com</a>
+					<br>
+					Phone: 123456789
+					<br>
+					Adress: Soppveien 69N, 0015 Oslo
+				</div>
 			</footer>
 		</div>
     </main>
