--- a/index.html
+++ b/index.html
@@ -33,7 +33,18 @@
 			<div class="home-container">
 				<!-- Division for categories -->
 				<div class="category">
-					<p>Coming soon</p>
+					<!--A figure that contains an image and its caption it includes som very basic styling. This image, including the rest, solves task 4c-->
+					<div class="category-item">
+						<img src="images/cod_r32.png" alt="Good looking fish">
+					</div>
+
+					<div class="category-item">
+						<img src="images/kantarell_r32.jpg" alt="Good looking fish">
+					</div>
+
+					<div class="category-item">
+						<img src="images/tytte_r32.jpg" alt="Good looking fish">
+					</div>
 				</div>
 
 				<!-- Division for article -->
