Completed home page styling

--- a/index.html
+++ b/index.html
@@ -31,20 +31,26 @@
 			
 			<!-- Division main content on the home page -->
 			<div class="home-container">
+
 				<!-- Division for categories -->
 				<div class="category">
+					<h1>Categories</h1>
+
 					<!--A figure that contains an image and its caption it includes som very basic styling. This image, including the rest, solves task 4c-->
-					<div class="category-item">
+					<a href="category/seafood" class="category-item">
 						<img src="images/cod_r32.png" alt="Good looking fish">
-					</div>
+						<h2>Seafood</h2>
+					</a>
 
-					<div class="category-item">
-						<img src="images/kantarell_r32.jpg" alt="Good looking fish">
-					</div>
+					<a href="category/mushrooms" class="category-item">
+						<img src="images/kantarell_r32.jpg" alt="Good looking shroom">
+						<h2>Mushrooms</h2>
+					</a>
 
-					<div class="category-item">
-						<img src="images/tytte_r32.jpg" alt="Good looking fish">
-					</div>
+					<a href="category/berry" class="category-item">
+						<img src="images/tytte_r32.jpg" alt="Good looking berry">
+						<h2>Berries</h2>
+					</a>
 				</div>
 
 				<!-- Division for article -->
