--- a/index.html
+++ b/index.html
@@ -36,19 +36,21 @@
 				<div class="category">
 					<h1>Categories</h1>
 
-					<!--A figure that contains an image and its caption it includes som very basic styling. This image, including the rest, solves task 4c-->
+					<!-- A category item that will redirect you to the respective category page -->
 					<a href="category/seafood" class="category-item">
-						<img src="images/cod_r32.png" alt="Good looking fish">
+						<img src="images/cod_r32.png" alt="Seafood category">
 						<h2>Seafood</h2>
 					</a>
-
+					
+					<!-- A category item that will redirect you to the respective category page -->
 					<a href="category/mushrooms" class="category-item">
-						<img src="images/kantarell_r32.jpg" alt="Good looking shroom">
+						<img src="images/kantarell_r32.jpg" alt="Mushroom category">
 						<h2>Mushrooms</h2>
 					</a>
 
+					<!-- A category item that will redirect you to the respective category page -->
 					<a href="category/berry" class="category-item">
-						<img src="images/tytte_r32.jpg" alt="Good looking berry">
+						<img src="images/tytte_r32.jpg" alt="Berry category">
 						<h2>Berries</h2>
 					</a>
 				</div>
@@ -64,11 +66,9 @@
 				<!--Here is the contact info for SoppShop. The mail, phone and adress is all fake-->
 				<div>
 					<h2>Contact info</h2>
-					Mail: <a href="contact@soppshop.com">contact@soppshop.com</a>
-					<br>
-					Phone: 123456789
-					<br>
-					Adress: Soppveien 69N, 0015 Oslo
+					<p>Mail: <a href="contact@soppshop.com">contact@soppshop.com</a></p>
+					<p>Phone: 123456789</p>
+					<p>Adress: Soppveien 69N, 0015 Oslo</p>
 				</div>
 			</footer>
 		</div>
