Stared working on the items page, made changes related to that in other documents

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Shop Shop</title>
 	<!-- Importing stylesheet -->
 	<link rel="stylesheet" href="./css/index.css">
+	<!-- Importing custom font from fonts.google.com -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
   </head>
   <body>
     <main>
