Added code that was not saved previously, thank you vs code

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
 						<li><a href="home">Home</a></li>|
-						<li><a href="items">Items</a></li>|
+						<li><a href="/items.html">Items</a></li>|
 						<li><a href="faq">FaQ</a></li>|
 						<li><a href="help">Help</a></li>
 					</ul>
