--- a/items.html
+++ b/items.html
@@ -4,26 +4,104 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Shop items</title>
-    <link rel="stylesheet" href="./css/index.css">
+    <link rel="stylesheet" href="./css/items.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
 </head>
 <body>
     <main>
-        <div id="itemspage"></div>
-        <header>
-            <h1 class="header title">Shop Shop items</h1>
-            <nav class="header-nav">
-                <select name="Products" id="products">
-                    <option value="fish">Fish</option>
-                    <option value="mushrooms">Mushrooms</option>
-                    <option value="berries">Berries</option>
-                    <option value="all products">all products</option>
-                  </select>
-        </header>
-			<div class="home-container">
-				<div class="products">
-					<h1 id="product-item">Product</h1>
-				</div>
+        <div id="itemspage">
+            <header>
+                <h1 class="header-title">Shop Shop items</h1>
+                <nav class="header-nav">
+                    <select name="Products" id="products">
+                        <option value="fish">Fish</option>
+                        <option value="mushrooms">Mushrooms</option>
+                        <option value="berries">Berries</option>
+                        <option value="all products">all products</option>
+                    </select>
+                </nav>
+            </header>
+            <div class="products-container">
+                <div class="product-header"> 
+                    <h1 id="product-item">Product</h1>
+                </div>
+                <div class="products">
+                    <div>
+                        <img src="images/cod_r32.png" alt="Cod class" class="products-item">
+                        <p class="text">This is a cod fish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/coalfish.jpg" alt="Coalfish class" class="products-item">
+                        <p class="text">This is a coalfish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/laks2.jpg" alt="Salmon class" class="products-item">
+                        <p class="text">This is a salmon</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/cod_r32.png" alt="Cod class" class="products-item">
+                        <p class="text">This is a cod fish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/coalfish.jpg" alt="Coalfish class" class="products-item">
+                        <p class="text">This is a coalfish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/laks2.jpg" alt="Salmon class" class="products-item">
+                        <p class="text">This is a salmon</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/cod_r32.png" alt="Cod class" class="products-item">
+                        <p class="text">This is a cod fish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/coalfish.jpg" alt="Coalfish class" class="products-item">
+                        <p class="text">This is a coalfish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/laks2.jpg" alt="Salmon class" class="products-item">
+                        <p class="text">This is a salmon</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/cod_r32.png" alt="Cod class" class="products-item">
+                        <p class="text">This is a cod fish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/coalfish.jpg" alt="Coalfish class" class="products-item">
+                        <p class="text">This is a coalfish</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    <div>
+                        <img src="images/laks2.jpg" alt="Salmon class" class="products-item">
+                        <p class="text">This is a salmon</p>
+                        <p class="text">More info</p>
+                        <p class="text">More info</p>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
