--- a/items.html
+++ b/items.html
@@ -6,6 +6,7 @@
     <title>Shop Shop items</title>
     <link rel="stylesheet" href="./css/items.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
+    <script src="./js/items.js" defer></script>
 </head>
 <body>
     <main>
