basic filter function

--- a/items.html
+++ b/items.html
@@ -15,10 +15,11 @@
                 <h1 class="header-title">Shop Shop items</h1>
                 <nav class="header-nav">
                     <select name="Products" id="products">
+                        <option value="all" selected="selected">all products</option>
                         <option value="fish">Fish</option>
-                        <option value="mushrooms">Mushrooms</option>
-                        <option value="berries">Berries</option>
-                        <option value="all products">all products</option>
+                        <option value="mushroom">Mushrooms</option>
+                        <option value="berry">Berries</option>
+                        
                     </select>
                 </nav>
             </header>
