Some further changes

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 					<!-- List of links to areas in site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-						<li><a href="home">Home</a></li>|
-						<li><a href="/items.html">Items</a></li>|
-						<li><a href="faq">FaQ</a></li>|
-						<li><a href="help">Help</a></li>
+						<li><a href="/index.html"class="Home-page">Home</a></li>
+						<li><a href="/items.html"class="Items-page">Items</a></li>
+						<li><a href="faq"class="faq-page">FaQ</a></li>
+						<li><a href="help"class="help-page">Help</a></li>
 					</ul>
 				</nav>
 			</header>
