--- a/items.html
+++ b/items.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shop Shop items</title>
     <link rel="stylesheet" href="./css/items.css">
-    <link rel="stylesheet" href="./css/index.css"
+    <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
     <script src="./js/items.js" defer></script>
 </head>
@@ -20,15 +20,14 @@
 					<!-- List of links to areas in site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-						<li><a href="home">Home</a></li>|
-						<li><a href="/items.html">Items</a></li>|
-						<li><a href="faq">FaQ</a></li>|
-						<li><a href="help">Help</a></li>
+                        <li><a href="/index.html"class="Home-page">Home</a></li>
+						<li><a href="/items.html"class="Items-page">Items</a></li>
+						<li><a href="faq"class="faq-page">FaQ</a></li>
+						<li><a href="help"class="help-page">Help</a></li>
 					</ul>
 				</nav>
 			</header>
             <h2>
-                <h1 class="header-title">Shop Shop items</h1>
                 <nav class="header-nav">
                     <select name="Products" id="products">
                         <option value="all" selected="selected">all products</option>
