--- a/items.html
+++ b/items.html
@@ -17,15 +17,15 @@
 				<h1 class="header-title">SHOP SHOP</h1>
 				<!-- Navigation of site-->
 				<nav class="header-nav">
-					<!-- List of links to areas in site-->
+					<!-- List of links to areas on the site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-                        <li><a href="/index.html"class="Home-page">Home</a></li>
-						<li><a href="/items.html"class="Items-page">Items</a></li>
-						<li><a href="faq"class="faq-page">FaQ</a></li>
-						<li><a href="help"class="help-page">Help</a></li>
+						<li><a href="/index.html">Home</a></li>
+						<li><a href="/items.html" class="currentPage">Items</a></li>
+						<li><a href="/faq">FaQ</a></li>
+						<li><a href="/help">Help</a></li>
 					</ul>
-				</nav>
+				</nav>	
 			</header>
             <h2>
                 <nav class="header-nav">
