--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 						<li><a href="/items.html">Items</a></li>
 						<li><a href="/faq">FaQ</a></li>
 						<li><a href="/help">Help</a></li>
+						<li><a href="/shoppingCart.html">Shopping cart</a></li>
 					</ul>
 				</nav>	
 			</header>
