--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -24,10 +24,11 @@
 					<!-- List of links to areas in site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-						<li><a href="home">Home</a></li>|
+						<li><a href="/index.html">Home</a></li>|
 						<li><a href="/items.html">Items</a></li>|
 						<li><a href="faq">FaQ</a></li>|
 						<li><a href="help">Help</a></li>
+						<li><a href="/shoppingCart.html" class = currentPage>Shopping cart</a></li>
 					</ul>
 				</nav>
 			</header>
