--- a/items.html
+++ b/items.html
@@ -14,7 +14,7 @@
         <div id="itemspage">
             <header>
 				<!-- Title of webpage-->
-				<h1 class="header-title">SHOP SHOP</h1>
+				<h1 class="header-title">Items</h1>
 				<!-- Navigation of site-->
 				<nav class="header-nav">
 					<!-- List of links to areas on the site-->
@@ -47,6 +47,16 @@
                 </div>
             </div>
         </div>
+        <!-- Footer for the website -->
+			<footer>
+				<!--Here is the contact info for SoppShop. The mail, phone and adress is all fake-->
+				<div>
+					<h2>Contact info</h2>
+					<p>Mail: <a href="contact@soppshop.com">contact@soppshop.com</a></p>
+					<p>Phone: 123456789</p>
+					<p>Adress: Soppveien 69N, 0015 Oslo</p>
+				</div>
+			</footer>
     </main>
 </body>
 </html>
