--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
 					<!-- List of links to areas on the site-->
 					<ul>
 						<!-- A link to the site, each link sends you to .../{link} example: .../shroom -->
-						<li><a href="/index.html" class="currentPage">Home</a></li>
-						<li><a href="/items.html">Items</a></li>
-						<li><a href="/faq">FaQ</a></li>
-						<li><a href="/help">Help</a></li>
+						<li><a href="/index.html" class = currentPage>Home</a></li>|
+						<li><a href="/items.html">Items</a></li>|
+						<li><a href="faq">FaQ</a></li>|
+						<li><a href="help">Help</a></li>
 						<li><a href="/shoppingCart.html">Shopping cart</a></li>
 					</ul>
 				</nav>	
