--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -27,7 +27,7 @@
 						<li><a href="/index.html">Home</a></li>|
 						<li><a href="/items.html">Items</a></li>|
 						<li><a href="faq">FaQ</a></li>|
-						<li><a href="help">Help</a></li>
+						<li><a href="help">Help</a></li>|
 						<li><a href="/shoppingCart.html" class = currentPage>Shopping cart</a></li>
 					</ul>
 				</nav>
