--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						<li><a href="/index.html" class = currentPage>Home</a></li>|
 						<li><a href="/items.html">Items</a></li>|
 						<li><a href="faq">FaQ</a></li>|
-						<li><a href="help">Help</a></li>
+						<li><a href="help">Help</a></li>|
 						<li><a href="/shoppingCart.html">Shopping cart</a></li>
 					</ul>
 				</nav>	
