--- a/items.html
+++ b/items.html
@@ -23,7 +23,7 @@
 						<li><a href="/index.html">Home</a></li>|
 						<li><a href="/items.html" class = currentPage>Items</a></li>|
 						<li><a href="faq">FaQ</a></li>|
-						<li><a href="help">Help</a></li>
+						<li><a href="help">Help</a></li>|
 						<li><a href="/shoppingCart.html">Shopping cart</a></li>
 					</ul>
 				</nav>	
