--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="./css/index.css">
 	<!-- Importing custom font from fonts.google.com -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
+	<script src="js/shopping-cart.js"></script>
   </head>
   <body>
     <main>
