products from shopping cart is now visible

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" href="./css/index.css">
 	<!-- Importing custom font from fonts.google.com -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
-	<script src="js/shopping-cart.js"></script>
+	<script type="module" src="js/settings.js"></script>
   </head>
   <body>
     <main>
