--- a/shoppingCart.html
+++ b/shoppingCart.html
@@ -11,6 +11,7 @@
 	<link rel="stylesheet" href="./css/shoppingCart.css">
 	<!-- Importing custom font from fonts.google.com -->
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
+	<script src="js/shopping-cart.js" defer></script>
   </head>
   <body>
     <main>
@@ -32,11 +33,8 @@
 					</ul>
 				</nav>
 			</header>
-            <div class="container">
-                <ol id="shoppingList">
-                    <li>hei</li>
-                </ol>
-            </div>
+            <ul class="products-in-cart">
+			</ul>
 			<!-- Footer for the website -->
 			<footer>
 				<!--Here is the contact info for SoppShop. The mail, phone and adress is all fake-->
